--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ button:hover {
   left: 50%; /* Center horizontally */
   transform: translateX(-50%); /* Adjust for the image's width */
   top: 100px; /* Position it below the button */
+}
+  #Jork [
   pointer-events: none; /* This will allow clicks to pass through */
 }
 
